# cli-snake

./: CMakeLists.txt  README.md  main.cpp
include/: About.h  PlatformDependentThings.h  TheGame.h  globals.h
src/: PlatformDependentThingsUnix.cpp  PlatformDependentThingsWin.cpp  TheGame.cpp
